<resources>
    <string name="app_name">URL Player </string>
    <string name="back_button">Back</string>
    <string name="add_url">Add URL</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="user_agent">User Agent</string>
    <string name="optional">Optional</string>
    <string name="save">SAVE</string>

    <!-- Error Messages -->
    <string name="error_invalid_user_agent">User agent is too short or invalid</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_title_too_short">Title must be at least 3 characters</string>
    <string name="error_title_exists">A channel with this title already exists</string>
    <string name="error_url_required">URL is required</string>
    <string name="error_invalid_url">Please enter a valid streaming URL (HLS, MP4, AVI, MKV, RTMP, RTSP, etc.)</string>
    <string name="error_saving_channel">Error saving channel</string>
    <string name="error_loading_channels">Error loading channels</string>
    <string name="error_invalid_position">Invalid channel position</string>
    <string name="error_channel_not_found">Channel not found</string>
    <string name="error_updating_list">Error updating channel list</string>
    <string name="error_removing_channel">Error removing channel</string>
    <string name="error_adding_channel">Error adding channel</string>
    <string name="error_updating_channel">Error updating channel</string>
    <string name="error_deleting_channel">Error deleting channel</string>
    <string name="error_playback">Error playing video</string>

    <!-- Success Messages -->
    <string name="success_channel_saved">Channel saved successfully</string>
    <string name="success_channel_updated">Channel updated successfully</string>
    <string name="success_channel_deleted">Channel deleted successfully</string>
    <string name="success_channel_removed">Channel removed successfully</string>
    <string name="success_channel_added">Channel added successfully</string>
    <string name="success_list_updated">Channel list updated</string>

    <!-- URL Types -->
    <string name="url_type_hls">HLS Stream</string>
    <string name="url_type_rtmp">RTMP Stream</string>
    <string name="url_type_rtsp">RTSP Stream</string>
    <string name="url_type_http">HTTP Stream</string>
    <string name="url_type_mp4">MP4 Video</string>
    <string name="url_type_udp">UDP Stream</string>
    <string name="url_type_rtp">RTP Stream</string>
    <string name="url_type_mms">MMS Stream</string>
    <string name="url_type_ts">Transport Stream</string>
    <string name="url_type_srt">SRT Stream</string>

    <!-- Update Activity -->
    <string name="update_channel">Update Channel</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="delete_channel_confirmation">Are you sure you want to delete this channel?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Empty State -->
    <string name="empty_channels_message">No channels added yet.\nTap + to add your first channel.</string>

    <!-- New string for empty state icon -->
    <string name="empty_state_icon">Empty state icon</string>


    <!-- App Info -->
    <string name="app_description">Watch Online Videos</string>

    <!-- Navigation Menu -->
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_message">Share via</string>
    <string name="email_subject">URL Player Beta Feedback</string>
    <string name="error_privacy_policy">Unable to open privacy policy</string>
    <string name="error_no_email">No email app found</string>

    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading...</string>
    <string name="video_name">URL Player Beta</string>
    <string name="folder_name">Folder Name</string>
    <string name="semi_colon">/</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="repeat_btn">Repeat</string>
    <string name="fullscreen_btn">Fullscreen</string>
    <string name="play_btn">Play</string>

    <!--    for menu-->
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">1.0x</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply to all videos</string>
    <string name="video_quality">Video Quality</string>

    <string name="select_quality">Select Quality</string>
    <string name="auto_quality_enabled">Auto quality enabled</string>
    <string name="quality_changed">Quality changed to %1$s</string>
    <string name="quality_change_failed">Failed to change quality: %1$s</string>

    <!-- Main Activity -->
    <string name="main_content">Main content</string>
    <string name="drawer_content">Navigation drawer content</string>
    <string name="tv_icon">TV icon</string>
    <string name="online_videos">ONLINE VIDEOS</string>


    <!-- AdMob Ad Unit IDs -->
    <!--    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <string name="admob_app_id">ca-app-pub-6211293117600297~8819418046</string>

    <!-- For testing, you can use these test IDs -->
    <!--    <string name="admob_interstitial_id" translatable="true">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--    <string name="admob_banner_id" translatable="true">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="admob_rewarded_interstitial_id" translatable="true">ca-app-pub-3940256099942544/5354046379</string>-->

    <string name="app_logo">App Logo</string>
    <string name="version">Version %s</string>
    <string name="version_format">Version %s</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Samyak2403\nhttps://github.com/samyak2403</string>

    <string name="about">About</string>

    <!-- Add these to your existing strings.xml file -->
    <string name="playlist">Playlist</string>
    <string name="error_invalid_playlist">Invalid playlist URL</string>
    <string name="error_loading_playlist">Error loading playlist</string>
    <string name="no_playlist_items_found">No playlist items found</string>
    <string name="language">Language</string>

    <string name="select_language">Select Language</string>
    <string name="language_changed">Language changed successfully</string>

    <!-- Add these to your existing strings.xml file -->
    <string name="view_pin">View PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="reset_pin">Reset</string>

    <string name="empty_state_description">No content available. Add items to get started.</string>

    <string name="no_channels_found">No channels found. Try adding some channels or check your connection.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code">QR Code</string>

    <!-- Add these string resources -->
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr_code_instruction">Position the QR code inside the frame</string>

    <string name="toggle_flash">Toggle flashlight</string>

    <string name="upload_from_gallery">Upload from gallery</string>

</resources>