<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Red"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="More Features"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/videoQuality"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/video_quality"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/video_quality"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtitlesBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/subtitles"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/subtitles_icon"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioBooster"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/booster"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/booster_icon"
            app:iconGravity="top"
            app:iconTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/speedBtn"-->
<!--            style="@style/Widget.AppCompat.Button.Borderless"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:text="@string/speed"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            app:icon="@drawable/speed_icon"-->
<!--            app:iconGravity="top"-->
<!--            app:iconTint="@color/white" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/sleepTimer"-->
<!--            style="@style/Widget.AppCompat.Button.Borderless"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:text="@string/sleep_timer"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            app:icon="@drawable/timer_icon"-->
<!--            app:iconGravity="top"-->
<!--            app:iconTint="@color/white" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pipModeBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/pip_mode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/pip_icon"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/languageBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/language"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_language"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioTrackBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/audio_track"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_audio_track"
            app:iconGravity="top"
            app:iconTint="@color/white" />
    </LinearLayout>

</LinearLayout>