<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Red"
            android:titleTextColor="@android:color/white"

            android:elevation="4dp"
            app:contentInsetStartWithNavigation="0dp"
            android:windowSoftInputMode="adjustResize" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Input Fields Container -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/urlInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/urlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userAgentInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:helperTextEnabled="true"
                app:helperText="@string/optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userAgentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_agent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:weightSum="1">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePinButton"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="change Pin"
                android:textSize="11sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/transparent"
                android:elevation="2dp"
                android:background="@drawable/pin_bg"
                android:textColor="@color/text_color"
                app:rippleColor="@color/Red"
                android:stateListAnimator="@null"/>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Action Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="Delete"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/Red"
            android:elevation="2dp"
            app:rippleColor="@color/Red"
            android:stateListAnimator="@null"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/yellow"
            android:elevation="2dp"
            app:rippleColor="@color/yellow"
            android:stateListAnimator="@null"/>

    </LinearLayout>
</LinearLayout>
